tests/ui/feature-gates/feature-gate-gen_blocks.mid.stderr
error: expected one of `move`, `use`, `{`, `|`, or `||`, found `gen`
  --> $DIR/feature-gate-gen_blocks.rs:14:11
   |
LL |     async gen {};
   |           ^^^ expected one of `move`, `use`, `{`, `|`, or `||`

error: expected one of `move`, `use`, `{`, `|`, or `||`, found `gen`
  --> $DIR/feature-gate-gen_blocks.rs:27:11
   |
LL |     async gen {};
   |           ^^^ expected one of `move`, `use`, `{`, `|`, or `||`

error[E0422]: cannot find struct, variant or union type `gen` in this scope
  --> $DIR/feature-gate-gen_blocks.rs:7:5
   |
LL |     gen {};
   |     ^^^ not found in this scope

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0422`.
